# veille_tracking

./: .coveragerc  .dockerignore  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Pipfile  README.md  coolify.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: django.yaml
api/: serializers.py  urls.py
api/views/: __init__.py  modelViewsets.py
app_books/: admin.py  apps.py  forms.py  models.py  search_books.py  urls.py
app_books/fixtures/: books_backup.json
app_books/migrations/: 0001_initial.py  0002_author_category_edition.py  0002_book_is_publied.py  0003_alter_edition_options_edition_name_edition_slug.py  0003_book_is_approved_book_submitted_by.py  (+9 more)
app_commentary/: apps.py  urls.py
app_library/: admin.py  apps.py  urls.py
app_user/: admin.py  models.py  urls.py
config/: urls.py
database/: veille_backup.json  veille_backup.sql
doc/: .~lock.bilan.odt#  .~lock.bonnes pratiques.odt#  .~lock.note d'intention.odt#  P13_02_bilan.odt  P13_03_bonnes pratiques.odt  association_entity_diagram.drawio  bilan.odt  bonnes pratiques.odt  note d'intention.odt  parcour utilisateur.drawio  poetry.md  ~$association_entity_diagram.drawio.bkp  ~$association_entity_diagram.drawio.dtmp  ~$parcour utilisateur.drawio.bkp  ~$parcour utilisateur.drawio.dtmp
nginx/: nginx.conf
server/: commandes.md  veille_tracking-gunicorn.conf  veille_tracking.conf
templates/: base.html
tests/: test_homepage.py
(+70 files in other folders)
